pkg/lang/testdata/ub/outputs/invalid/unknown-meta-key.ub
outputs: {
  bad: {
    value: 1
    @bogus: true
  }
}
